# FunctionalGeometry

./: Geometry.cabal  README.md
app/: Main.hs
src/: Geometry.hs
