name:                Geometry
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/Geometry#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Geometry
  build-depends:       base >= 4.7 && < 5
                     , Rasterific
  default-language:    Haskell2010

executable Geometry-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Geometry
                     , Rasterific
                     , JuicyPixels
  default-language:    Haskell2010

test-suite Geometry-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Geometry
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/Geometry
